2003-09-28  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b107

	* Migrated "admin options" in view_album.php into a drop-down menu.

	* Functions popup() and popup_js() (in util.php) now return
	  JavaScript code without "javascript:" prepended to it.
	
	* Added function testRequirement() to util.php to simplify testing of
	  common boolean conditions.
	
	* Removed PHP notice from reset_votes.php.
	
2003-09-27 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b106
	
	* Don't display border when displaying frames.

	* Renamed polaroid to polaroids, and add new frame polaroid.  Based 
	  polaroids, but just a single photo.

2003-09-27 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b105

	* Frames around images are now configurable.  New frames can be added 
	  in html_wrap/frames, and they can be be configured for main page,
	  and for each album.

2003-09-26  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b104

	* Added preliminary support for EZ Prints photo print service.

	* Fixed a Config. Wizard PHP warning as well as a debugging line.
	
2003-09-26  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b103

	* Implemented support for multiple photo print services. Chalked in
	  support for EZ Prints, however it doesn't do anything yet. Bumped
	  album version to migrate to new data format.

	* Removed PHP warning from upgrade_album.php.

2003-09-26  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b102

	* Bugfix: Count ouf maybe and unavailable locales

	* Bugfix: Remove \" inside a _()

	* Language: Updated German (de_DE) :), Korean (ko_KR)

	* Change: Added $Id and Copyright in some files

2003-09-26  Chris Schwerdt <muti@afterglo.ws> 1.4.1-cvs-b101

	* Fixed auto rotate bug in gallery_remote2.php. Comparison had not
	  been changed.

2003-09-26  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.1-cvs-b100

	* Changed autoRotate to auto_rotate in gallery_remote2.php for
	  protocol consistency, added debugging statements.
