@@ -40,7 +40,7 @@ if (!isset($gallery)) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.4.1-cvs-b107";
+$gallery->version = "1.4.1-cvs-b108";
 $gallery->config_version = 66;
 $gallery->album_version = 21;
 $gallery->user_version = 3;
