@@ -167,14 +167,14 @@ class Image {
 		if ($this->resizedName) {
 			if ($full) {
 				return "<img src=\"$dir/$this->name.$this->type\" " .
-					"width=\"$this->raw_width\" \"height=$this->raw_height $attrs\" alt=\"$alttext\" title=\"$alttext\">";
+					"width=\"$this->raw_width\" \"height=$this->raw_height $attrs\" alt=\"$alttext\" title=\"$alttext\" />";
 			} else {
 				return "<img src=\"$dir/$this->resizedName.$this->type\" " .
 					"width=\"$this->width\" \"height=$this->height\" " .
-					"$attrs alt=\"$alttext\" title=\"$alttext\">";
+					"$attrs alt=\"$alttext\" title=\"$alttext\" />";
 			}
 		} else {
-			return "<img src=\"$dir/$this->name.$this->type\" $size_val $attrs alt=\"$alttext\" title=\"$alttext\">";
+			return "<img src=\"$dir/$this->name.$this->type\" $size_val $attrs alt=\"$alttext\" title=\"$alttext\" />";
 		}
 	}
 
