@@ -303,16 +303,20 @@ $adminOptions = array(
 		      'add_photos'      => array('name' => _('add photos'),
 						 'requirements' => array('canAddToAlbum'),
 						 'action' => 'popup',
-						 'value' => 'add_photos.php?set_albumName=' . $gallery->session->albumName),
+						 'value' => makeGalleryUrl('add_photos.php',
+									   array('set_albumName' => $gallery->session->albumName))),
 		      'add_photo'       => array('name' => _('add photo'),
 						 'requirements' => array('canAddToAlbum',
 									 'extraFieldsExist'),
 						 'action' => 'popup',
-						 'value' => 'add_photo.php?set_albumName=' . $gallery->session->albumName),
+						 'value' => makeGalleryUrl('add_photo.php',
+									   array('set_albumName' => $gallery->session->albumName))),
 		      'rename_album'    => array('name' => _('rename album'),
 						 'requirements' => array('isAlbumOwner'),
 						 'action' => 'popup',
-						 'value' => 'rename_album.php?set_albumName=' . $gallery->session->albumName . "&index=$i&useLoad=1"),
+						 'value' => makeGalleryUrl('rename_album.php',
+									   array('set_albumName' => $gallery->session->albumName,
+										 'index' => $i, 'useLoad' => 1))),
 		      'nested_album'    => array('name' => _('new nested album'),
 						 'requirements' => array('canCreateSubAlbum',
 									 'notOffline'),
@@ -323,7 +327,8 @@ $adminOptions = array(
 						 'requirements' => array('canChangeText',
 									 'notOffline'),
 						 'action' => 'popup',
-						 'value' => 'extra_fields.php?set_albumName=' . $gallery->session->albumName),
+						 'value' => makeGalleryUrl('extra_fields.php',
+									   array('set_albumName' => $gallery->session->albumName))),
 		      'edit_captions'   => array('name' => _('edit captions'),
 						 'requirements' => array('canChangeText',
 									 'notOffline'),
@@ -335,43 +340,53 @@ $adminOptions = array(
 						 'requirements' => array('canWriteToAlbum',
 									 'photosExist'),
 						 'action' => 'popup',
-						 'value' => 'sort_album.php?set_albumName=' . $gallery->session->albumName),
+						 'value' => makeGalleryUrl('sort_album.php',
+									   array('set_albumName' => $gallery->session->albumName))),
 		      'resize_all'      => array('name' => _('resize all'),
 						 'requirements' => array('canWriteToAlbum',
 									 'photosExist'),
 						 'action' => 'popup',
-						 'value' => 'resize_photo.php?set_albumName=' . $gallery->session->albumName . '&index=all'),
+						 'value' => makeGalleryUrl('resize_photo.php',
+									   array('set_albumName' => $gallery->session->albumName,
+										 'index' => 'all'))),
 		      'rebuild_thumbs'  => array('name' => _('rebuild thumbs'),
 						 'requirements' => array('canWriteToAlbum',
 									 'photosExist'),
 						 'action' => 'popup',
-						 'value' => doCommand('remake-thumbnail', array('set_albumName' => $galery->session->albumName, 'index' => 'all'),
+						 'value' => doCommand('remake-thumbnail',
+								      array('set_albumName' => $galery->session->albumName, 'index' => 'all'),
 								      'view_album.php')),
 		      'properties'      => array('name' => _('properties'),
 						 'requirements' => array('canWriteToAlbum'),
 						 'action' => 'popup',
-						 'value' => 'edit_appearance.php?set_albumName=' . $gallery->session->albumName),
+						 'value' => makeGalleryUrl('edit_appearance.php',
+									   array('set_albumName' => $gallery->session->albumName))),
 		      'permissions'     => array('name' => _('permissions'),
 						 'requirements' => array('isAdminOrAlbumOwner'),
 						 'action' => 'popup',
-						 'value' => 'album_permissions.php?set_albumName=' . $gallery->session->albumName),
+						 'value' => makeGalleryUrl('album_permissions.php',
+									   array('set_albumName' => $gallery->session->albumName))),
 		      'poll_properties' => array('name' => _('poll properties'),
 						 'requirements' => array('isAdminOrAlbumOwner'),
 						 'action' => 'popup',
-						 'value' => 'poll_properties.php?set_albumName=' . $gallery->session->albumName),
+						 'value' => makeGalleryUrl('poll_properties.php',
+									   array('set_albumName' => $gallery->session->albumName))),
 		      'poll_results'    => array('name' => _('poll results'),
 						 'requirements' => array('isAdminOrAlbumOwner'),
 						 'action' => 'url',
-						 'value' => makeGalleryUrl('poll_results.php', array('set_albumName' => $gallery->session->albumName))),
+						 'value' => makeGalleryUrl('poll_results.php',
+									   array('set_albumName' => $gallery->session->albumName))),
 		      'poll_reset'      => array('name' => _('poll reset'),
 						 'requirements' => array('isAdminOrAlbumOwner'),
 						 'action' => 'popup',
-						 'value' => 'reset_votes.php?set_albumName=' . $gallery->session->albumName),
+						 'value' => makeGalleryUrl('reset_votes.php',
+									   array('set_albumName' => $gallery->session->albumName))),
 		      'view_comments'   => array('name' => _('view comments'),
 						 'requirements' => array('isAdminOrAlbumOwner',
 									 'allowComments'),
 						 'action' => 'url',
-						 'value' => makeGalleryUrl('view_comments.php', array('set_albumName' => $gallery->session->albumName)))
+						 'value' => makeGalleryUrl('view_comments.php',
+									   array('set_albumName' => $gallery->session->albumName)))
 );
 
 /* sort the drop-down array by translated name */
