@@ -1,3 +1,10 @@
+2003-09-28  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b108
+
+	* Fixed bug where new drop-down wouldn't work in Nukes.
+
+	* Made Image.php <img> tags XHTML compliant. There are still many
+	  other non-compliant <img> tags.
+	
 2003-09-28  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b107
 
 	* Migrated "admin options" in view_album.php into a drop-down menu.
